added about us page

--- a/frontend/templates/homepage/index.html
+++ b/frontend/templates/homepage/index.html
@@ -218,7 +218,7 @@
                     <div class="carousel-caption">
                         <h1>About Us</h1>
                         <p>ResumeHub is a platform designed to empower job seekers by providing tools to create, manage, and distribute resumes effectively. Our mission is to help individuals achieve their career goals.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn More</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="/aboutus.html">Learn More</a></p>
                     </div>
                 </div>
             </div>
