--- a/frontend/templates/homepage/index.html
+++ b/frontend/templates/homepage/index.html
@@ -228,7 +228,7 @@
                     <div class="carousel-caption text-end">
                         <h1>Learn More</h1>
                         <p>Discover how ResumeHub can streamline your job search process, connect you with relevant job opportunities, and enhance your professional profile.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Explore</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="/faq.html">Explore</a></p>
                     </div>
                 </div>
             </div>
