--- a/frontend/templates/resumes/resume.html
+++ b/frontend/templates/resumes/resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>[Your Name] Resume</title>
+  <title>{{ user_profile.full_name }} Resume</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
   <style>
     /* Add your custom CSS styles here (optional) */
@@ -33,8 +33,8 @@
 <body>
 
   <div class="container">
-    <h1>[Your Name]</h1>
-    <p>[Your Contact Information (Email, Phone Number, Location)]</p>
+    <h1>{{ resume.candidate.profile.full_name }}</h1>
+    <p>[Your Contact Information (Email, {{resume.candidate.profile.contact_number}}, Location)]</p>
 
     <h2><strong>Profile Summary</strong></h2>
     <p>[A brief overview of your skills and experience relevant to the job you're applying for]</p>
@@ -75,7 +75,7 @@
 
     <h2><strong>Skills</strong></h2>
     <ul>
-      <li>[Skill 1]</li>
+      <li>{{ resume.technical_skills }}</li>
       <li>[Skill 2]</li>
     </ul>
   </div>
